# gtestForSM

./: readme.md
StateMachine/: CMakeLists.txt  run.sh  test.cpp
StateMachine/InitOper/: ini.c  initialization.h
StateMachine/html_generator/: generate.sh  report.xml  repot.html
StateMachine/src/: MainStateMachine.c  MainStateMachine.h  MainStateMachine_data.c  MainStateMachine_private.h  MainStateMachine_types.h  rtwtypes.h
